Tried to fix layout if there are too many notes - doesn't work in Firefox: global vertical scrollbar appears

--- a/notes.css
+++ b/notes.css
@@ -17,12 +17,16 @@ body {
 #main {
   flex: 1;
   display: flex;
+  height: 100%;
+  max-height: 100%; 
 }
 
 #notes_list_column {
   max-width: 20%;
   flex: 1;
-  word-wrap: break-word; 
+  word-wrap: break-word;
+  max-height: 100%; 
+  overflow: auto;
 }
 
 #editor {
